logs/Slang/chapter-5/5.6.4--compiler-directives-include.sv.log
name: include-directive
description: Include empty file
should_fail: 0
tags: 5.6.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6.4--compiler-directives-include.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6.4--compiler-directives-include.sv:8:10: error: could not find or open include file
`include "/dev/null"
         ^
